--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <!-- this scales the content to display nicely on mobiles/tablets -->
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <title>Project Demo - Home</title>
+        <title>Project - Home</title>
 
         <!-- CSS only -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -15,7 +15,7 @@
 
     <body>
         <nav class="navbar navbar-expand-md navbar-dark bg-dark  fixed-top">
-            <a class="navbar-brand" href="./index.html">CFG Project Demo</a>
+            <a class="navbar-brand" href="./index.html">CFG Project</a>
         
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -27,7 +27,7 @@
                   <a class="nav-link" href="./index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./about.html">About</a>
+                  <a class="nav-link" href="./pages/getstarted.html">Get Started</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">Contact</a>
