--- a/pages/getstarted.html
+++ b/pages/getstarted.html
@@ -10,7 +10,8 @@
 
         <!-- CSS only -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link rel="stylesheet" href="./css/styles.css">
+        <link rel="stylesheet" href="../css/styles.css">
+        <link href="https://fonts.googleapis.com/css2?family=Urbanist&display=swap" rel="stylesheet">
 
     </head>
 
@@ -28,7 +29,7 @@
                     <a class="nav-link" href="../index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./pages/getstarted.html">Get Started</a>
+                    <a class="nav-link" href="./getstarted.html">Get Started</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Contact</a>
@@ -38,11 +39,24 @@
         </nav>
 
         <main>
-            <div class="container">
+            <!-- <div class="container">
                 <h1>About Page</h1>
                 <a href="../index.html" class="btn btn-primary">
                     Go Home
                 </a>
+            </div> -->
+
+            <div class="container">
+                <div id="home" class="flex-column flex-center">
+                    <h1>What's your aesthetic?</h1>
+                    <a href="/game.html" class="btn">Play</a>
+                </div>
+            </div>
+
+            <div class="home-box">
+                <h3>Instructions:</h3>
+                <p>Total number of questions:<span class="total-question">5</span></p>
+                <button type="button" class="btn">Start Quiz</button>
             </div>
         </main>
 
