--- a/pages/getstarted.html
+++ b/pages/getstarted.html
@@ -49,15 +49,15 @@
             <div class="container">
                 <div id="home" class="flex-column flex-center">
                     <h1>What's your aesthetic?</h1>
-                    <a href="/game.html" class="btn">Play</a>
+                    <a href="./quiz.html" class="btn">Start Quiz!</a>
                 </div>
             </div>
 
-            <div class="home-box">
+            <!-- <div class="home-box">
                 <h3>Instructions:</h3>
                 <p>Total number of questions:<span class="total-question">5</span></p>
                 <button type="button" class="btn">Start Quiz</button>
-            </div>
+            </div> -->
         </main>
 
         <script src="jsquiz.js"></script>
