--- a/pages/quiz.html
+++ b/pages/quiz.html
@@ -6,11 +6,13 @@
         <!-- this scales the content to display nicely on mobiles/tablets -->
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <title>Project Demo - Home</title>
+        <title>Aesthetics Quiz</title>
 
         <!-- CSS only -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link rel="stylesheet" href="./css/styles.css">
+        <link rel="stylesheet" href="../css/styles.css">
+        <link rel="stylesheet" href="../css/quiz.css">
+        <link href="https://fonts.googleapis.com/css2?family=Urbanist&display=swap" rel="stylesheet">
 
     </head>
 
@@ -39,10 +41,11 @@
 
         <main>
             <div class="container">
-                <h1>About Page</h1>
-                <a href="./index.html" class="btn btn-primary">
-                    Go Home
-                </a>
+                <div id="game" class="justify-center flex-column">
+                    <div id="hud">
+                        <div class="hud-item"></div>
+                    </div>
+                </div>
             </div>
         </main>
 
