--- a/pages/quiz.html
+++ b/pages/quiz.html
@@ -43,7 +43,21 @@
             <div class="container">
                 <div id="game" class="justify-center flex-column">
                     <div id="hud">
-                        <div class="hud-item"></div>
+                        <div class="hud-item">
+                            <p id="progressText" class="hud-prefix">
+                                Question
+                            </p>
+                            <div id="progressBar">
+                                <div id="progressBarFull">
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="question">What is the answer to this question?</div>
+                    <div class="choice-container">
+                        <p class="chopice-prefix">A</p>
+                        <p class="choice-text" data-number="1">Choice</p>
                     </div>
                 </div>
             </div>
