--- a/pages/quiz.html
+++ b/pages/quiz.html
@@ -27,10 +27,10 @@
             <div class="collapse navbar-collapse" id="navbarsExampleDefault">
                 <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="./index.html">Home</a>
+                    <a class="nav-link" href="../index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./about.html">About</a>
+                    <a class="nav-link" href="./getstarted.html">Get Started</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Contact</a>
@@ -54,15 +54,36 @@
                             </div>
                         </div>
                     </div>
-                    <div id="question">What is the answer to this question?</div>
+                    <h1 id="question">What is the answer to this question?</h1>
                     <div class="choice-container">
                         <p class="chopice-prefix">A</p>
                         <p class="choice-text" data-number="1">Choice</p>
+                    </div>
+                    <div class="choice-container">
+                        <p class="chopice-prefix">B</p>
+                        <p class="choice-text" data-number="2">Choice</p>
+                    </div>
+                    <div class="choice-container">
+                        <p class="chopice-prefix">C</p>
+                        <p class="choice-text" data-number="3">Choice</p>
+                    </div>
+                    <div class="choice-container">
+                        <p class="chopice-prefix">D</p>
+                        <p class="choice-text" data-number="4">Choice</p>
+                    </div>
+                    <div class="choice-container">
+                        <p class="chopice-prefix">E</p>
+                        <p class="choice-text" data-number="5">Choice</p>
+                    </div>
+                    <div class="choice-container">
+                        <p class="chopice-prefix">F</p>
+                        <p class="choice-text" data-number="6">Choice</p>
                     </div>
                 </div>
             </div>
         </main>
 
+        <script src="../js/quiz.js"></script>
         <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
