--- a/pages/getstarted.html
+++ b/pages/getstarted.html
@@ -32,7 +32,7 @@
                     <a class="nav-link" href="./getstarted.html">Get Started</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
+                    <a class="nav-link" href="./aboutus.html">About Us</a>
                 </li>
                 </ul>
             </div>
