--- a/pages/quiz.html
+++ b/pages/quiz.html
@@ -56,27 +56,27 @@
                     </div>
                     <h1 id="question">What is the answer to this question?</h1>
                     <div class="choice-container">
-                        <p class="chopice-prefix">A</p>
+                        <p class="choice-prefix">A</p>
                         <p class="choice-text" data-number="1">Choice</p>
                     </div>
                     <div class="choice-container">
-                        <p class="chopice-prefix">B</p>
+                        <p class="choice-prefix">B</p>
                         <p class="choice-text" data-number="2">Choice</p>
                     </div>
                     <div class="choice-container">
-                        <p class="chopice-prefix">C</p>
+                        <p class="choice-prefix">C</p>
                         <p class="choice-text" data-number="3">Choice</p>
                     </div>
                     <div class="choice-container">
-                        <p class="chopice-prefix">D</p>
+                        <p class="choice-prefix">D</p>
                         <p class="choice-text" data-number="4">Choice</p>
                     </div>
                     <div class="choice-container">
-                        <p class="chopice-prefix">E</p>
+                        <p class="choice-prefix">E</p>
                         <p class="choice-text" data-number="5">Choice</p>
                     </div>
                     <div class="choice-container">
-                        <p class="chopice-prefix">F</p>
+                        <p class="choice-prefix">F</p>
                         <p class="choice-text" data-number="6">Choice</p>
                     </div>
                 </div>
