--- a/aboutus.html
+++ b/aboutus.html
@@ -44,31 +44,32 @@
             </div>
           </div>
 
+        
           <div class="row">
             <div class="col-sm-6">
               <div class="card">
                 <div class="card-body">
-                  <h5 class="card-title">Special title treatment</h5>
+                  <h5 class="card-title">Aisling Kelly</h5>
                   <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                  <a href="#" class="btn btn-secondary">Go somewhere</a>
+                  <a href="./pages/getstarted.html" class="btn btn-secondary">Get Your Result!</a>
                 </div>
               </div>
             </div>
             <div class="col-sm-6">
               <div class="card">
                 <div class="card-body">
-                  <h5 class="card-title">Special title treatment</h5>
+                  <h5 class="card-title">Jessica Barbulescu</h5>
                   <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                  <a href="#" class="btn btn-secondary">Go somewhere</a>
+                  <a href="./pages/getstarted.html" class="btn btn-secondary">Get Your Result!</a>
                 </div>
               </div>
             </div>
             <div class="col-sm-6">
                 <div class="card">
                   <div class="card-body">
-                    <h5 class="card-title">Special title treatment</h5>
+                    <h5 class="card-title">Katelynn O'Brien</h5>
                     <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                    <a href="#" class="btn btn-secondary">Go somewhere</a>
+                    <a href="./pages/getstarted.html" class="btn btn-secondary">Get Your Result!</a>
                   </div>
                 </div>
               </div>
