--- a/aboutus.html
+++ b/aboutus.html
@@ -68,7 +68,8 @@
                 <div class="card">
                   <div class="card-body">
                     <h5 class="card-title">Katelynn O'Brien</h5>
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                    <p class="card-text">19 years of age, from Kildare. 3rd year History of Art and Architecture and Italian Student.</p>
+                    <p class="card-text">Aesthetic Quiz Result:</p>
                     <a href="./pages/getstarted.html" class="btn btn-secondary">Get Your Result!</a>
                   </div>
                 </div>
