--- a/aboutus.html
+++ b/aboutus.html
@@ -59,7 +59,8 @@
               <div class="card">
                 <div class="card-body">
                   <h5 class="card-title">Jessica Barbulescu</h5>
-                  <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                  <p class="card-text">20 years of age, from Dublin. 3rd year Physiology Student at Trinity.</p>
+                  <p class="card-text">Aesthetic Quiz Result:</p>
                   <a href="./pages/getstarted.html" class="btn btn-secondary">Get Your Result!</a>
                 </div>
               </div>
