Quiz css updates

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                   <a class="nav-link" href="./pages/getstarted.html">Get Started</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./aboutus.html">About Us</a>
+                  <a class="nav-link" href="./pages/aboutus.html">About Us</a>
                 </li>
               </ul>
             </div>
