--- a/pages/getstarted.html
+++ b/pages/getstarted.html
@@ -47,6 +47,17 @@
             </div>
         </main>
 
+        <div class="card text-center">
+            <div class="card-body text-white bg-dark">
+              <h5 class="card-title">Created by:</h5>
+              <p class="card-text">Aisling Kelly, Jessica Barbulescu and Katelynn O'Brien.</p>
+            </div>
+            <div class="card-footer text-white bg-dark">
+              Copyright Code First Girls 2021
+            </div>
+        </div>
+      
+
         <script src="jsquiz.js"></script>
         <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
