--- a/pages/quiz.html
+++ b/pages/quiz.html
@@ -17,7 +17,7 @@
     </head>
 
     <body>
-        <nav class="navbar navbar-expand-md navbar-dark bg-dark  fixed-top">
+        <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
             <a class="navbar-brand" href="./index.html">CFG Project</a>
         
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
@@ -82,6 +82,17 @@
                 </div>
             </div>
         </main>
+
+        <div class="card text-center">
+            <div class="card-body text-white bg-dark">
+              <h5 class="card-title">Created by:</h5>
+              <p class="card-text">Aisling Kelly, Jessica Barbulescu and Katelynn O'Brien.</p>
+            </div>
+            <div class="card-footer text-white bg-dark">
+              Copyright Code First Girls 2021
+            </div>
+        </div>
+      
 
         <script src="../js/quiz.js"></script>
         <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
