--- a/aboutus.html
+++ b/aboutus.html
@@ -88,7 +88,7 @@
               <a href="./pages/getstarted.html" class="btn btn-secondary">Take Our Quiz</a>
             </div>
             <div class="card-footer text-white bg-dark">
-              Copyright Code First Girls 2021
+              Copyright &copy Code First Girls 2021
             </div>
           </div>
 
