--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -11,6 +11,7 @@
         <!-- CSS only -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css2?family=Urbanist&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="../css/styles.css">
 
     </head>
 
@@ -25,10 +26,10 @@
             <div class="collapse navbar-collapse" id="navbarsExampleDefault">
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                  <a class="nav-link" href="./index.html">Home</a>
+                  <a class="nav-link" href="../index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./pages/getstarted.html">Get Started</a>
+                  <a class="nav-link" href="./getstarted.html">Get Started</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="./aboutus.html">About Us</a>
