--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -85,7 +85,7 @@
           <div class="collapse navbar-collapse" id="navbarsExampleDefault">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item active">
-                <a class="nav-link" href="./getstarted.html">Take our Quiz!</a>
+                <a class="nav-link" href="./getstarted.html">Take Our Quiz!</a>
               </li>
               <li class="nav-item active">
                 <a class="nav-link" href="https://codefirstgirls.org.uk/?gclid=Cj0KCQjws4aKBhDPARIsAIWH0JXCmuDwLFIHxcxY301zb7rASNGdIfwa5dVHcRpvaDO3Df0WzWdwnGAaAmszEALw_wcB">Copyright Code First Girls 2021</a>
